--- a/学习路线.md
+++ b/学习路线.md
@@ -56,9 +56,19 @@
 
 ###### 16、字符串匹配（BF、RK）
 
-能实现BF算法，能看懂RK
+能实现BF算法，能看懂RK。
 
 ###### 17、字符串匹配（BM、KMP、ACP自动机）
 
+###### 18、字符串匹配（Trie）
 
+不需要代码实现，但要看懂。
+
+###### 19、位图
+
+看懂即可，要实现一个位图结构。
+
+###### 20、四种算法思想
+
+ 	重难点。贪心、分治、回溯、**动态规划**。做到能实现Leetcod上Medium难度的题目。
 
