--- a/1、复杂度分析.md
+++ b/1、复杂度分析.md
@@ -6,7 +6,7 @@
 
 可以粗略的用算法代码执行时间来表示执行效率。
 
-**代码执行时间 T(n) **与每行代码的**执行次数 n** 成正比。
+**代码执行时间 T(n) **与每行代码的**执行次数**成正比。
 
 <img src="https://static001.geekbang.org/resource/image/22/ef/22900968aa2b190072c985a08b0e92ef.png" alt="img" style="zoom:50%;" />
 
@@ -22,7 +22,7 @@ T(n) 表示代码执行的时间；n 表示数据规模的大小；**f(n) 表示
 
 要点大体有 3 个：关注循环执行次数最多代码，加法法则，乘法法则。
 
-**执行次数最多的代码：**上面提到在公式中，低阶、常量、系数对复杂度没有影响，与数据规模大小 n 无关。
+**执行次数最多的代码：**上面提到在公式中，低阶、常量、系数对复杂度没有影响。
 
 **加法法则：**上面说低阶、常量、系数对复杂度没有影响，这个可能会不好体会，就是这些只是会影响代码的执行时间，比如数据规模大一点或小一点，那么常量或者系数或者低阶会变化，代码执行时间会变长或者变短，总归是个确定的值，如果数据规模 n 趋于无限，那么常量这些都可以忽略了，真的跟极限的概念很像。但回到时间复杂度的概念来说，关注的是执行效率和数据规模增长的变化趋势，不管常量系数什么的怎么变化，都可以忽略掉，因为对时间复杂度没有影响。真正影响的是最高阶。
 
@@ -127,7 +127,7 @@ m 和 n 是函数的参数，无法事先知道量级大小，所以在表示复
 
 <img src="https://static001.geekbang.org/resource/image/36/7f/36c0aabdac69032f8a43368f5e90c67f.jpg" alt="img" style="zoom:50%;" />
 
-这个叫加权平均值，也就是期望。因此平均情况时间复杂度又叫加权平均时间复杂度或者期望时间复杂度。
+这个叫加权平均值，也就是期望。因此平均情况时间复杂度又叫**加权平均时间复杂度**或者**期望时间复杂度**。
 
 **引出这三种复杂度实际上不是需要都分析，而是因为相同的算法在不同情况下的时间复杂度量级有差距，才会用三种复杂度来区分。**
 
@@ -164,7 +164,7 @@ m 和 n 是函数的参数，无法事先知道量级大小，所以在表示复
 
 **重头分析来了：**通过上面的分析和式子可以发现，这个算法的时间复杂度有规律，就是大部分都是 O(1) 的时间复杂度，然后出现一个 O(n) 的时间复杂度，而且，它们的出现有相对先后的时序关系，即一个求和 O(n) 后出现 n-1 个插入 O(1) ，然后循环。
 
-对于这种特殊场景的时间复杂度分析，不需要像平均复杂度一样把所有情况的概率都求得，而是找出一般规律即可，这种分析方法就叫做摊还分析，得出的就叫做均摊时间复杂度。
+对于这种特殊场景的时间复杂度分析，不需要像平均复杂度一样把所有情况的概率都求得，而是找出一般规律即可，这种分析方法就叫做**摊还分析**，得出的就叫做**均摊时间复杂度**。
 
 每一次的求和 O(n) 都会跟着 n-1 个插入  O(1) ，所以把求和 O(n) 这次耗费最长时间的操作用时，均摊到其余的每个 O(1) 上，就相当于 n-1 个 O(1) 均摊了一个  O(n)，这样一组连续的操作就都是  O(1) 了，这就是均摊的思路。
 
