--- a/1、复杂度分析.md
+++ b/1、复杂度分析.md
@@ -1,24 +1,24 @@
-##### ·为什么要复杂度分析？
+[TOC]
+
+## 为什么要复杂度分析？
 
 通过统计、监控得到算法执行时间和占内存大小，这叫**事后统计法**。这种统计方法有很大局限性，因为**测试结果非常依赖测试环境，**测试环境中的硬件不同会对测试结果产生很大影响，另外，**数据规模**也会影响测试结果，这样的例子在排序算法中会有明显的对比。所以需要一个不需要具体测试数据的办法来粗略估计算法执行效率。
 
-##### ·算法执行效率
+## 算法执行效率
 
-可以粗略的用算法代码执行时间来表示执行效率。
-
-**代码执行时间 T(n) **与每行代码的**执行次数**成正比。
+可以粗略的用算法代码执行时间来表示执行效率。**代码执行时间 T(n) **与每行代码的**执行次数**成正比。
 
 <img src="https://static001.geekbang.org/resource/image/22/ef/22900968aa2b190072c985a08b0e92ef.png" alt="img" style="zoom:50%;" />
 
 T(n) 表示代码执行的时间；n 表示数据规模的大小；**f(n) 表示每行代码执行的次数总和。**因为这是一个公式，所以用 f(n) 来表示。公式中的 O，表示代码的执行时间 T(n) 与 f(n) 表达式成正比。
 
-为什么 f(n) 加粗，因为这个表示执行次数总和，O() 的是次数，不是 n ，这个会在分析计算时经常搞混。
+为什么 f(n) 加粗，因为这个表示执行次数总和，O() 的是次数，不是 n 数据规模，这个会在分析计算时经常搞混。
 
 时间复杂度并不表示代码的真正执行时间，**而是表示代码执行时间随数据规模增长的变化趋势**，所以全称叫**渐进时间复杂度**。
 
-类似 T(n) = O(2n+2)， T(n) = O(2n^2^+2n+3) 这样的式子，低阶、常量系数三部分不会左右增长趋势可以忽略，只需要考虑最大阶，有点类似极限，所以可以记为：T(n) = O(n)， T(n) = O(n^2^) 。
+类似 T(n) = O(2n+2)， T(n) = O(2n^2^+2n+3) 这样的式子，低阶、常量、系数三者不会左右增长趋势，可以忽略，只需要考虑最大阶，有点类似极限，所以可以记为：T(n) = O(n)， T(n) = O(n^2^) 。
 
-##### ·时间复杂度分析
+## 时间复杂度分析
 
 要点大体有 3 个：关注循环执行次数最多代码，加法法则，乘法法则。
 
@@ -30,11 +30,11 @@ T~1~(n)=O(f(n))，T~2~(n)=O(g(n))；那么 T(n)=T~1~(n)+T~2~(n) = max(O(f(n)), O
 
 也跟水桶原理差不多，桶能装多少水不取决最高的木板，而是看哪块木板最低，水也就能装那么多。
 
-**乘法法则：**有嵌套的代码，它的时间复杂度是嵌套内外代码复杂度的乘积。比如一段代码执行次数是 n，在这 n 次执行中，每一次里，又有一段代码要执行 n 次，所以这段嵌套总共执行了 n * n 次，复杂度就是O(n^2^)。
+**乘法法则：**有嵌套的代码，它的时间复杂度是嵌套内、外代码复杂度的乘积。比如一段代码执行次数是 n，在这 n 次执行中，每一次里，又有一段代码要执行 n 次，所以这段嵌套总共执行了 n * n 次，复杂度就是O(n^2^)。
 
 T(n) = T~1~(n) * T~2~(n) = O(n*n) = O(n^2^)
 
-##### ·见时间复杂度
+## 常见时间复杂度
 
 O(1) < O(log n) < O(n) < O(n log n) < O(n^2^)
 
@@ -44,14 +44,16 @@ O(1) < O(log n) < O(n) < O(n log n) < O(n^2^)
 
 **O(log n)、O(n log n)：**对数阶时间复杂度，比较常见也比较难分析。
 
-> i=1;
-> while (i <= n)  {
-> 	i = i * 2;
-> } 
+```
+i=1;
+while (i <= n)  {
+	i = i * 2;
+} 
+```
 
 这里 i 是从 1 开始取，大于 n 时停止，实际上是一个等比数列，把它一个个列出来：
 
-2^0^  2^1^  2^2^···2^k^···2^x^ = n，其中的 x 就是这段代码的执行次数，x = log~2~n，**这里注意了！**这就是上面提到加粗 f(n) 的原因，这里 x = f(n)，所以时间复杂度就是 O(log~2~n)。
+2^1^  2^2^···2^k^···2^x^ = n，其中的 x 就是这段代码的执行次数，x = log~2~n，**这里注意了！**这就是上面提到加粗 f(n) 的原因，这里 x = f(n)，所以时间复杂度就是 O(log~2~n)。
 
 当循环体变成 
 
@@ -61,25 +63,28 @@ x = log~3~n，时间复杂度就是 O(log~3~n)。
 
 实际上，对数阶的时间复杂度都可以记为 O(log n) （以 2 为底的对数可以不写 2 嘛），对数有换底公式和对数乘法，所以像 log~2~n、log~3~n 之类的都可以换成一个常数 C * log n 的形式，而常数，前面讲了一堆，是不影响时间复杂度的。
 
-而 O(n log n) 就是时间复杂度为 O(log n) 的代码执行了 n 次的结果。归并排序和快速排序的时间复杂度就是 O(n log n)，当然这两种排序后面会详细讲到，现在记得这俩排序很快就行了。
+而 O(n log n) 就是时间复杂度为 O(log n) 的代码执行了 n 次的结果。归并排序和快速排序的时间复杂度就是 O(n log n)，当然这两种排序后面会详细讲到，现在记得这俩排序很快就行了。(看完 CS50 发现大部分情况是快排比较快的，这种排序速度的比较最好是看可视化图形，这样比较直观容易理解，youtube上有很多视频，多搜搜看看，https://www.cs.usfca.edu/~galles/visualization/ComparisonSort.html 这个网站可以参考一下) 
 
 **O(m+n)、O(m*n)：**这样的表示说明时间复杂度是由两种代码数据规模决定的。
 
->int cal(int m, int n) {
->	int sum_1 = 0;
->	int i = 1;
->	for (; i < m; ++i) {
->		sum_1 = sum_1 + i;
->	}
->
->​	int sum_2 = 0;
->​    int j = 1;
->​    for (; j < n; ++j) {
->​    	sum_2 = sum_2 + j;
->​    }
->
-> return sum_1 + sum_2;
->}
+```
+int cal(int m, int n) {
+	int sum_1 = 0;
+	int i = 1;
+	for (; i < m; ++i) {
+		sum_1 = sum_1 + i;
+	}
+
+	int sum_2 = 0;
+	int j = 1;
+
+	for (; j < n; ++j) {
+		sum_2 = sum_2 + j;
+	}
+
+	return sum_1 + sum_2;
+}
+```
 
 m 和 n 是函数的参数，无法事先知道量级大小，所以在表示复杂度的时候不能简单实用加法原则省略其中一个，但此时乘法原则依然适用。
 
@@ -91,25 +96,27 @@ m 和 n 是函数的参数，无法事先知道量级大小，所以在表示复
 
 时间复杂度为非多项式量级的算法问题叫作 **NP** 问题。当数据规模 n 越来越大时，非多项式量级算法的执行时间会急剧增加，执行时间会无限增长，属于非常低效的算法。
 
-##### ·空间复杂度
+## 空间复杂度
 
 全称叫**渐进空间复杂度**，表示算法的存储空间与数据规模增长之间的关系。
 
->void print(int n) {
->	int i = 0;
->	int[] a = new int[n];
->	for (i; i <n; ++i) {
->		a[i] = i * i;
->	}  
->
->​	for (i = n-1; i >= 0; --i) {
->​    	print out a[i]
->​    }
->}
+```
+void print(int n) {
+	int i = 0;
+	int[] a = new int[n];
+	for (i; i <n; ++i) {
+		a[i] = i * i;
+	}  
+
+​	for (i = n-1; i >= 0; --i) {
+​    	print out a[i]
+​    }
+}
+```
 
 变量 i ，是常量阶的，跟时间复杂度一样，跟数据规模没有关系，忽略。后面申请了一个大小为 n 的数组，剩下的代码没有占用更多空间，所以空间复杂度就是 O(n)。常见的空间复杂度是 O(1)、O(n)、O(n^2^)，对数阶的一般用不到，暂时掌握到这里。
 
-##### ·复杂度分析进阶
+## 时间复杂度分析进阶
 
 四个复杂度分析方面的知识点：最好情况时间复杂度、最坏情况时间复杂度、平均情况时间复杂度、均摊时间复杂度。
 
@@ -158,7 +165,7 @@ m 和 n 是函数的参数，无法事先知道量级大小，所以在表示复
 
 如何求得？
 
-数组长度是 n ，总共有 n 种插入位置，即 n 种情况，这 n 种情况因为数组没满不用求和所以时间复杂度都为 0(1)；还有一种额外情况，即数组满了，需要遍历求和了，此时的时间复杂度为 O(n)。这 n+1 中情况发生的概率实际上是一样的，都为 $1 \over n+1$，根据加权平均的计算方法，求得的平均时间复杂度是：
+数组长度是 n ，总共有 n 种插入位置，即 n 种情况，这 n 种情况因为数组没满不用求和所以时间复杂度都为 O(1)；还有一种额外情况，即数组满了，需要遍历求和了，此时的时间复杂度为 O(n)。这 n+1 中情况发生的概率实际上是一样的，都为 $1 \over n+1$，根据加权平均的计算方法，求得的平均时间复杂度是：
 
 <img src="https://static001.geekbang.org/resource/image/6d/ed/6df62366a60336d9de3bc34f488d8bed.jpg" alt="img" style="zoom:50%;" />
 
