--- a/想放弃看这个鸡汤.md
+++ b/想放弃看这个鸡汤.md
@@ -2,7 +2,7 @@
 
 迷茫来源于对知识盲区的恐惧，这个时候切记否定自己，更要坚持住，千万别半途而废。能做到的往下看。
 
-不要相信有捷径，没有捷径，没有杀手锏，更没有秘籍宝典。不要相信学霸的游刃有余是一眼看穿一针见血，都是一步一个脚印走出来的，差的不是天赋，差的是认知能力，是接收能力，是理解吸收能力，这些，勤能补拙。
+不要相信有捷径，没有捷径，没有杀手锏，更没有秘籍宝典。不要相信学霸的游刃有余是一眼看穿一针见血，都是一步一个脚印走出来的，差的不是天赋，差的是认知能力，是接受能力，是理解吸收能力，这些，勤能补拙。
 
 “认认真真听讲，认认真真做每一道题”，这种看似简单又笨拙的学习方法，却不一定能执行到位。所以不要质疑自己学习方法对不对，不要否定自己，否定越多，越迷茫。
 
@@ -16,4 +16,4 @@
 
 入门是一个非常漫长和煎熬的过程，谁都逃不过。
 
-逆境商数，逆商，当你遇到困难的时候，你如何去面对，这将会决定你人生最终能走多远。
+**逆境商数，逆商，当你遇到困难的时候，你如何去面对，这将会决定你人生最终能走多远。**
