--- a/1、复杂度分析.md
+++ b/1、复杂度分析.md
@@ -53,7 +53,7 @@ while (i <= n)  {
 
 这里 i 是从 1 开始取，大于 n 时停止，实际上是一个等比数列，把它一个个列出来：
 
-2^1^  2^2^···2^k^···2^x^ = n，其中的 x 就是这段代码的执行次数，x = log~2~n，**这里注意了！**这就是上面提到加粗 f(n) 的原因，这里 x = f(n)，所以时间复杂度就是 O(log~2~n)。
+2^1^  2^2^···2^k^···2^x^ = n，其中的 x 就是这段代码的执行次数，x = log~2~n，**这里注意了！**这就是上面提到加粗 f(n) 的原因，这里 x = f(n)，是乘方的次数，刚好也是乘方这个行为执行的次数，所以时间复杂度就是 O(log~2~n)。
 
 当循环体变成 
 
