--- a/1、复杂度分析.md
+++ b/1、复杂度分析.md
@@ -114,7 +114,7 @@ void print(int n) {
 }
 ```
 
-变量 i ，是常量阶的，跟时间复杂度一样，跟数据规模没有关系，忽略。后面申请了一个大小为 n 的数组，剩下的代码没有占用更多空间，所以空间复杂度就是 O(n)。常见的空间复杂度是 O(1)、O(n)、O(n^2^)，对数阶的一般用不到，暂时掌握到这里。
+变量 i ，是常量阶的，跟时间复杂度一样，跟数据规模没有关系，忽略。后面申请了一个大小为 n 的数组，剩下的代码没有占用更多空间，一切关于空间的操作都再这个数组内进行。所以空间复杂度就是 O(n)。常见的空间复杂度是 O(1)、O(n)、O(n^2^)，对数阶的一般用不到，暂时掌握到这里。
 
 ## 时间复杂度分析进阶
 
